--- a/Clase_1.4/index.html
+++ b/Clase_1.4/index.html
@@ -6,6 +6,8 @@
 <body>
     <h1>Este es mi sitio web personal</h1>
     <p>Esto es un parrafo</p>
+
+    <h3>Este es otro titulo</h3>
     
 </body>
 </html>
